Fix styling for footer & Fix size of menu links & Fix size of Project's Name

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -60,3 +60,7 @@ $first-shadow-poster-color: $black;
 $second-shadow-poster-color: $darkblue;
 
 $icon-color: $white;
+
+/*Footer*/
+$yearColor: $darkWhite;
+$year-bg: $gray;
