--- a/src/components/features/Splash/Splash.module.scss
+++ b/src/components/features/Splash/Splash.module.scss
@@ -2,7 +2,12 @@
 
 .root {
   @include flex(column, center, center);
+  background-attachment: fixed;
   background-color: $splash-overlay;
+  background-image: url("/images/splash4.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
   left: 0;
   margin: 0;
@@ -11,6 +16,7 @@
   top: 0;
   width: 100%;
   z-index: 1;
+
   .programNameBox {
     @include flex(column, center, center);
     position: absolute;
@@ -20,7 +26,7 @@
   }
   .bottomCurve {
     @include flex(column, center, flex-end);
-    bottom: 0;
+    bottom: -1px;
     position: absolute;
     width: 100%;
     svg {
