--- a/src/components/features/Posters/Posters.module.scss
+++ b/src/components/features/Posters/Posters.module.scss
@@ -3,7 +3,7 @@
 /*main view*/
 
 .root {
-  @include flex(row, start, center);
+  @include flex(row, flex-start, center);
 }
 
 .postersGallery {
@@ -14,11 +14,12 @@
 .postersGallery .poster {
   cursor: pointer;
   margin: 12px 12px;
-  box-shadow: 0px 0px 1px $first-shadow-poster-color, 0 0 5px $second-shadow-poster-color, 0 0 2px $first-shadow-poster-color;
+  box-shadow: 0px 0px 1px $first-shadow-poster-color, 0 0 5px $second-shadow-poster-color,
+    0 0 2px $first-shadow-poster-color;
 }
 
 .postersGallery .poster:hover {
-  filter: opacity(.7);
+  filter: opacity(0.7);
 }
 
 .poster {
@@ -34,21 +35,21 @@
   top: 0;
   left: 0;
   display: block;
-  background-color:rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   visibility: hidden;
   opacity: 0;
   overflow-y: scroll;
   z-index: 999;
 }
 
-.modalOpen{
+.modalOpen {
   visibility: visible;
   opacity: 1;
 
   @extend .modal;
 }
 
-.modalOpen img{
+.modalOpen img {
   width: auto;
   max-width: 175%;
   height: auto;
@@ -59,7 +60,7 @@
   padding: 25px;
 }
 
-.icon{
+.icon {
   position: fixed;
   top: 20px;
   right: 50px;
@@ -72,14 +73,14 @@
 
 /*RWD*/
 
-@media (max-width: 991px){
+@media (max-width: 991px) {
   .postersGallery {
     width: 75%;
     @include flex(column, center, center);
   }
 }
 
-@media (max-width: 480px){
+@media (max-width: 480px) {
   .postersGallery {
     width: 100%;
     @include flex(column, center, center);
