--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,8 +1,6 @@
 @import "./settings.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Ubuntu&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Ubuntu:wght@700&display=swap");
 
 h1,
 h2,
