--- a/src/components/layout/Navigation/Navigation.module.scss
+++ b/src/components/layout/Navigation/Navigation.module.scss
@@ -131,3 +131,14 @@
     }
   }
 }
+
+@media (prefers-color-scheme: light) {
+  .root {
+    .menu {
+      background: $menu-bg-darkTheme;
+    }
+    a {
+      color: $linkColor-darkTheme;
+    }
+  }
+}
