--- a/src/components/common/AboutUs/AboutUs.module.scss
+++ b/src/components/common/AboutUs/AboutUs.module.scss
@@ -1,8 +1,9 @@
 @import "../../../styles/settings.scss";
 
 .aboutUsTitle {
+  @include flex(row, center, center);
   padding: 10px;
-  margin: 0 25px 10px 25px;
+  margin: 40px 25px 50px 25px;
   border-bottom: 3px solid $bottom-color-below-title;
   width: 30%;
 }
