--- a/src/components/common/AboutUs/AboutUs.module.scss
+++ b/src/components/common/AboutUs/AboutUs.module.scss
@@ -5,7 +5,7 @@
   padding: 10px;
   margin: 40px 25px 50px 25px;
   border-bottom: 3px solid $bottom-color-below-title;
-  width: 30%;
+  width: 50%;
 }
 
 .aboutUsDesc {
@@ -14,6 +14,16 @@
   text-align: justify;
   line-height: 1.5;
   margin: 0 25px 0 25px;
+}
+
+.aboutUsTitleDesc {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  padding: 10px;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 15px 25px 15px 25px;
 }
 
 .descriptionLogo {
