Add new splash image

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -50,7 +50,7 @@ $linkColor-active: $gold;
 
 /*Splash*/
 $splash-overlay: rgba(0, 0, 0, 0.2);
-$programName-color: $darkWhite;
+$programName-color: $lightWhite;
 $programName-shadow: 2px 2px 2px $black;
 $splashCurve: $darkWhite;
 $splashCurve-darkTheme: $lightBlack;
