--- a/src/components/common/AboutProgram/AboutProgram.module.scss
+++ b/src/components/common/AboutProgram/AboutProgram.module.scss
@@ -5,10 +5,18 @@
   padding: 10px;
   margin: 40px 25px 50px 25px;
   border-bottom: 3px solid $bottom-color-below-title;
-  width: 30%;
+  max-width: 100%;
 }
 
-.aboutProgram {
+.aboutProgramSubtitle {
+  font-size: 1.3rem;
+  padding: 10px;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 15px 25px 15px 25px;
+}
+
+.aboutProgramDescription {
   padding: 10px;
   text-indent: 50px;
   text-align: justify;
@@ -16,148 +24,122 @@
   margin: 0 25px 0 25px;
 }
 
-.aboutProgram1 {
-  font-size: 1.5rem;
-  padding: 10px;
-  font-weight: bold;
-  line-height: 1.5;
-  margin: 15px 25px 15px 25px;
-}
-
 .contactBox {
-  font-size: 1.25rem;
+  font-size: 1.23rem;
   font-weight: bold;
   line-height: 1.5;
   margin: 15px 0 15px 0;
+
   p {
-    font-size: 1.25rem;
+    font-size: 1.23rem;
     margin: 0;
     padding: 0;
   }
 }
-.aboutProgram2 {
+
+.aboutProgramContactDescription {
   padding: 10px;
   text-align: center;
 }
 
-.contactBox {
-  @include flex(column, center, center);
+.foodListUl {
+  list-style: none;
 }
 
-/* XXXL ExtraExtraLarge Devices, UltraWide Desktops  */
-@media (min-width: 1921px) {
-  .root {
+.foodListRow {
+  @include flex(row, center, start);
+  padding: 5px;
+  color: $lightGreyBlue;
+  font-weight: bold;
+  cursor: grab;
+
+  &:hover {
+    color: $cookie;
   }
 }
 
 /* LG Large Devices, Tablets iPad Pro */
 @media (min-width: 1200px) and (max-width: 1920px) {
   .root {
-    .aboutProgramTitle {
-      width: 40%;
-    }
   }
 }
 
 /* Large Devices, Laptops, Large Tablets iPad Pro */
 @media only screen and (min-width: 1024px) and (max-width: 1199px) {
   .root {
-    .aboutProgramTitle {
-      width: 40%;
+
+    .aboutProgramDescription {
+      margin: 0 15px 0 15px;
     }
-  }
 
-  .aboutProgram {
-    margin: 0 15px 0 15px;
-  }
+    .aboutProgramSubtitle {
+      margin: 15px;
+    }
 
-  .aboutProgram1 {
-    margin: 15px;
-  }
-
-  .aboutProgram2 {
-    margin: 0 15px 0 15px;
+    .aboutProgramContactDescription {
+      margin: 0 15px 0 15px;
+    }
   }
 }
 
 /* MD Medium Devices, Tablets iPad */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .root {
-    .aboutProgramTitle {
-      width: 40%;
+    .aboutProgramDescription {
+      margin: 0 10px 0 10px;
     }
-  }
 
-  .aboutProgram {
-    margin: 0 10px 0 10px;
-  }
+    .aboutProgramSubtitle {
+      margin: 15px 10px 15px 10px;
+    }
 
-  .aboutProgram1 {
-    margin: 15px 10px 15px 10px;
-  }
-
-  .aboutProgram2 {
-    margin: 0 10px 0 10px;
+    .aboutProgramContactDescription {
+      margin: 0 10px 0 10px;
+    }
   }
 }
 
 /* SM Small Devices, Small tablets Large Phones */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .root {
-    .aboutProgramTitle {
-      width: 40%;
+
+    .aboutProgramDescription {
+      margin: 0 5px 0 5px;
     }
-  }
 
-  .aboutProgram {
-    margin: 0 5px 0 5px;
-  }
+    .aboutProgramSubtitle {
+      margin: 15px 5px 15px 5px;
+    }
 
-  .aboutProgram1 {
-    margin: 15px 5px 15px 5px;
-  }
-
-  .aboutProgram2 {
-    margin: 0 5px 0 5px;
+    .aboutProgramContactDescription {
+      margin: 0 5px 0 5px;
+    }
   }
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width: 0px) and (max-width: 479px) {
   .root {
-    .aboutProgramTitle {
-      width: 55%;
+
+    .aboutProgramDescription {
+      margin: 0 3px 0 3px;
     }
-  }
 
-  .aboutProgram {
-    margin: 0 3px 0 3px;
-  }
+    .aboutProgramSubtitle {
+      margin: 15px 3px 15px 3px;
+    }
 
-  .aboutProgram1 {
-    margin: 15px 3px 15px 3px;
-  }
+    .aboutProgramContactDescription {
+      margin: 0 3px 0 3px;
+    }
 
-  .aboutProgram2 {
-    margin: 0 3px 0 3px;
-  }
-  .contactBox {
-    font-size: 1.15rem;
-    line-height: 1;
-    p {
+    .contactBox {
       font-size: 1.15rem;
+      line-height: 1;
+
+      p {
+        font-size: 1.15rem;
+      }
     }
-  }
-}
-
-/* Media pointer*/
-@media (hover: hover) and (pointer: fine) {
-  .root {
-  }
-}
-
-/* Media touchable */
-@media (pointer: coarse) {
-  .root {
   }
 }
