create mixin for title, subtitle and description && fix style names in about us && remove unnecessary code

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -4,3 +4,28 @@
   flex-direction: $flex-direction;
   justify-content: $justify-content;
 }
+
+@mixin sectionTitle {
+  @include flex(row, center, center);
+  padding: 10px;
+  margin: 40px 25px 50px 25px;
+  border-bottom: 3px solid $bottom-color-below-title;
+  max-width: 100%;
+}
+
+@mixin subsectionTitle {
+  @include flex(null, null, center);
+  font-size: 1.5rem;
+  padding: 10px;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 15px 25px 15px 25px;
+}
+
+@mixin sectionDefaultDescription {
+  padding: 10px;
+  text-indent: 50px;
+  text-align: justify;
+  line-height: 1.5;
+  margin: 0 25px 0 25px;
+}
