--- a/src/components/common/AboutProgram/AboutProgram.module.scss
+++ b/src/components/common/AboutProgram/AboutProgram.module.scss
@@ -14,9 +14,9 @@
 }
 
 .requirements {
-  color: $lightGreyBlue;
+  color: black;
   font-weight: bold;
-  border-bottom: 1px solid $lightGreyBlue;
+  border-bottom: 1px solid black;
   cursor: grab;
 
   &:hover {
@@ -29,7 +29,7 @@
   font-size: 1.23rem;
   font-weight: bold;
   line-height: 1.5;
-  margin: 15px 0 15px 0;
+  margin: 15px 0 0 0;
 
   p {
     font-size: 1.23rem;
@@ -38,21 +38,22 @@
   }
 
   .aboutProgramContactDescription {
-    padding: 10px;
+    padding: 5px;
     text-align: center;
   }
 }
 
 .foodListUl {
+
   list-style: none;
   padding-left: 0;
-  margin: 0 25px 0 25px;
 
   .foodListRow {
     padding: 5px;
-    color: $lightGreyBlue;
+    color: black;
     font-weight: bold;
     cursor: grab;
+    margin-left: 33%;
 
     &:hover {
       color: $gold;
@@ -82,6 +83,11 @@
     .aboutProgramContactDescription {
       margin: 0 15px 0 15px;
     }
+
+    .foodListRow {
+      align-items: center;
+      margin-left: 30%;
+    }
   }
 }
 
@@ -98,6 +104,11 @@
 
     .aboutProgramContactDescription {
       margin: 0 10px 0 10px;
+    }
+
+    .foodListRow {
+      align-items: center;
+      margin-left: 24%;
     }
   }
 }
@@ -116,6 +127,11 @@
     .aboutProgramContactDescription {
       margin: 0 5px 0 5px;
     }
+
+    .foodListRow {
+      align-items: center;
+      margin-left: 15%;
+    }
   }
 }
 
@@ -127,7 +143,7 @@
     }
 
     .aboutProgramSubtitle {
-      margin: 15px 3px 15px 3px;
+      margin: 15px 3px 0 3px;
     }
 
     .aboutProgramContactDescription {
@@ -141,6 +157,11 @@
       p {
         font-size: 1.15rem;
       }
+    }
+
+    .foodListRow {
+      align-items: center;
+      margin-left: 8%;
     }
   }
 }
