--- a/src/components/common/ProgramDepartments/ProgramDepartments.module.scss
+++ b/src/components/common/ProgramDepartments/ProgramDepartments.module.scss
@@ -4,28 +4,26 @@
   @include sectionTitle;
 }
 
-.department {
-  // padding: 5px;
+.departmentName, .departmentAddress {
   margin-top: 25px;
-  // text-indent: 50px;
   line-height: 1.5;
-  text-align: justify;
-  // border-bottom: springgreen 1px solid;
+}
 
-  // border: aqua 1px solid;
+.departmentName {
+  text-align: justify;
+  list-style: square;
+}
+
+.departmentAddress {
+  list-style: none;
+  margin-top: 25px;
 }
 
 .row {
   display: flex;
-  // flex-direction: column;
   justify-content: center;
-  // align-items: center;
-  // display: flex;
   flex-direction: row;
-  // justify-content: space-around;
-  // align-items: flex-start;
   margin: 0 25px 0 25px;
-  // width: 30%;
 }
 
 .departmentsSubtitle {
@@ -33,162 +31,63 @@
 }
 
 .departmentDetails {
-  // margin: 5px;
   margin-bottom: 25px;
 }
 
-.container {
-  // @include flex(row, center, center);
-  // flex-wrap: wrap;
-}
-
-/* XXXL ExtraExtraLarge Devices, UltraWide Desktops  */
+/* ExtraExtraLarge Devices, UltraWide Desktops  */
 @media (min-width: 1921px) {
-  .root {
-  }
-}
-
-/* XXL Extra Extra Large Devices, Desktops  */
-@media (min-width: 1400px) and (max-width: 1920px) {
-  .root {
-  }
-}
-
-/* XL Extra Extra Large Devices, Laptops  */
-@media (min-width: 1200px) and (max-width: 1399px) {
-  .root {
-  }
 }
 
 /* LG Large Devices, Tablets iPad Pro */
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .root {
-    // .title {
-    //   width: 50%;
-    // }
+@media (min-width: 1200px) and (max-width: 1920px) {
+}
 
-    // .row {
-    //   width: 75%;
-    //   margin: 0 25px 0 25px;
-    //   @include flex(column, center, center);
-    // }
-
-    // .department {
-    //   width: 90%;
-    // }
-
-    // .departmentDetails {
-    //   width: 90%;
-    // }
+/* LG Large Devices, Tablets iPad Pro */
+@media only screen and (min-width: 1024px) and (max-width: 1199px) {
+  .row {
+    margin: 0 15px 0 15px;
   }
 }
 
 /* MD Medium Devices, Tablets iPad */
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
   .root {
-    // .title {
-    //   width: 50%;
-    // }
-
-    // .container {
-    //   @include flex(column, null, null);
-    // }
-
-    // .row {
-    //   width: 75%;
-    //   margin: 0 25px 0 25px;
-    //   @include flex(column, center, center);
-    // }
-
-    // .department {
-    //   width: 90%;
-    // }
-
-    // .departmentDetails {
-    //   width: 90%;
-    // }
+    .row {
+      margin: 0 10px 0 10px;
+    }
   }
 }
 
 /* SM Small Devices, Small tablets Large Phones */
-@media only screen and (min-width: 576px) and (max-width: 767px) {
+@media only screen and (min-width: 480px) and (max-width: 767px) {
   .root {
-    // .title {
-    //   width: 70%;
-    // }
+    .departmentName, .departmentAddress {
+      margin-top: 0;
+    }
 
-    // .container {
-    //   @include flex(column, null, null);
-    // }
-
-    // .row {
-    //   width: 75%;
-    //   margin: 0 25px 0 25px;
-    //   @include flex(column, center, center);
-    // }
-
-    // .department {
-    //   width: 90%;
-    // }
-
-    // .departmentDetails {
-    //   width: 90%;
-    // }
+    .row {
+      margin: 0 5px 0 5px;
+    }
   }
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (min-width: 0px) and (max-width: 575px) {
+@media only screen and (min-width: 0px) and (max-width: 479px) {
   .root {
-    // .title {
-    //   width: 70%;
-    // }
-
-    // .container {
-    //   @include flex(column, null, null);
-    // }
-
-    // .row {
-    //   width: 75%;
-    //   margin: 0 25px 0 25px;
-    //   @include flex(column, center, center);
-    // }
-
-    // .department {
-    //   width: 90%;
-    // }
-
-    // .departmentDetails {
-    //   width: 90%;
-    // }
-
-    .department {
+    .departmentName, .departmentAddress {
       margin-top: 0;
     }
 
     .departmentsSubtitle {
-      font-size: 0.9rem;
+      font-size: 0.85rem;
     }
 
     .departmentDetails {
-      margin-bottom: 30px;
+      font-size: 0.85rem;
     }
 
     .row {
-      font-size: 0.9rem;
       margin: 0 3px 0 3px;
     }
-  }
-}
-
-/* Media pointer*/
-@media (hover: hover) and (pointer: fine) {
-  .root {
-  }
-}
-
-/* Media touchable */
-@media (pointer: coarse) {
-  .root {
   }
 }
