--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -61,6 +61,9 @@ $menu-bg-darkTheme: $lightBlack;
 $menu-link: $lightBlack;
 $menu-link-active: $gold;
 
+/*About Program*/
+$aboutProgramCarousel-bg: $white;
+
 /*Posters*/
 $first-shadow-poster-color: $black;
 $second-shadow-poster-color: $darkBlue;
