--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -4,130 +4,46 @@
   @include flex(column, center, center);
 }
 
-.footerRow {
-  @include flex(row, center, center);
-  width: 75%;
+.yearBox {
+  @include flex(column, center, center);
+  background: $year-bg;
+  color: $yearColor;
+  width: 100%;
 }
 
-.logo {
-  @include flex(row, center, center)
-}
-
-.contactText {
-  @include flex(column, null, null);
-  padding: 15px;
-  line-height: 1;
-
-  a {
-    margin-bottom: 7px;
-  }
-}
-
-.contactHead {
-  margin: 5px 0 5px 0;
+.churchLinkBox {
+  display: flex;
+  flex-direction: row;
 }
 
 .textFooter {
   margin: 5px;
 }
 
-.logoDetails {
-  margin: 0 10px 0 10px;
-  max-width: 100px;
-
-  img {
-    width: 100px;
-  }
-}
-
-.logo {
-  @include flex(row, null, null);
-}
-
-.yearBox {
-  @include flex(row, center, center);
-  background: $year-bg;
-  color: $yearColor;
-  width: 100%;
-}
-
 /* XXXL ExtraExtraLarge Devices, UltraWide Desktops  */
 @media (min-width: 1921px) {
-  .root {
-    .footerRow {
-      @include flex(row, center, center);
-      width: 100%;
-    }
-  }
 }
 
 /* XXL Extra Extra Large Devices, Desktops  */
 @media (min-width: 1400px) and (max-width: 1920px) {
-  .root {
-    @include flex(column, center, center);
-
-    .footerRow {
-      @include flex(row, center, center);
-      width: 55%;
-    }
-  }
 }
 
 /* XL Extra Extra Large Devices, Laptops  */
 @media (min-width: 1200px) and (max-width: 1399px) {
-  .root {
-    @include flex(column, center, center);
-
-    .footerRow {
-      @include flex(row, center, center);
-      width: 80%;
-    }
-  }
 }
 
 /* LG Large Devices, Tablets iPad Pro */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .root {
-    @include flex(column, center, center);
-
-    .footerRow {
-      width: 80%;
-    }
-  }
 }
 
 /* MD Medium Devices, Tablets iPad */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .root {
-    @include flex(column, center, center);
-
-    .footerRow {
-      @include flex(column, center, space-between);
-      width: 90%;
-    }
-  }
 }
 
 /* SM Small Devices, Small tablets Large Phones */
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-  .root {
-    @include flex(column, center, center);
-
-    .footerRow {
-      @include flex(column, center, space-between);
-      width: 90%;
-    }
-  }
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width: 0px) and (max-width: 575px) {
-  .root {
-    @include flex(column, center, center);
-
-    .footerRow {
-      @include flex(column, center, space-between);
-      width: 90%;
-    }
-  }
 }
