Add new photo for splash & Fix navigation link for program departmets

--- a/src/components/features/Splash/Splash.module.scss
+++ b/src/components/features/Splash/Splash.module.scss
@@ -3,7 +3,7 @@
 .root {
   @include flex(column, center, center);
   background-attachment: fixed;
-  background-image: url("/images/splash5.webp");
+  background-image: url("/images/splash.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
