--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -50,8 +50,8 @@ $linkColor-active: $gold;
 
 /*Splash*/
 $splash-overlay: rgba(0, 0, 0, 0.2);
-$programName-color: $lightWhite;
-$programName-shadow: 2px 2px 2px $black;
+$programName-color: $darkWhite;
+$programName-shadow: 4px 4px 8px $black;
 $splashCurve: $darkWhite;
 $splashCurve-darkTheme: $lightBlack;
 
