--- a/src/components/features/Splash/Splash.module.scss
+++ b/src/components/features/Splash/Splash.module.scss
@@ -22,6 +22,12 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
+    img {
+      height: 8rem;
+      object-fit: contain;
+      width: 8rem;
+      filter: drop-shadow($programName-shadow);
+    }
   }
 
   .bottomCurve {
